feat(tools): 新增7个浏览器自动化工具
新增工具:
- select: 下拉框选择，支持原生select和UI框架(Ant Design/Element UI等)
- check: 复选框/开关操作，支持checkbox/radio/Switch组件
- hover: 悬停操作，触发菜单展开/Tooltip显示等效果
- pressKey: 键盘按键模拟，支持Enter/Escape/Tab/方向键等
- getValue: 获取元素值或属性
- screenshot: 截图功能，支持可见区域和全页面长截图
- download: 下载功能，支持URL下载和文本内容保存

修改文件:
- manifest.json: 添加downloads/scripting权限
- automation.ts: 添加新工具类型定义
- automation-model.ts: 添加Function Calling工具定义
- browser-tools.ts: 实现新工具执行逻辑
- message-handler.ts: 添加截图/下载消息处理
- message.ts: 添加新消息类型定义

新增文件:
- media-service.ts: 截图和下载服务实现

--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,9 @@
   "permissions": [
     "activeTab",
     "storage",
-    "sidePanel"
+    "sidePanel",
+    "downloads",
+    "scripting"
   ],
   "host_permissions": [
     "https://*/*"
