--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,8 @@
     "storage",
     "sidePanel",
     "downloads",
-    "scripting"
+    "scripting",
+    "tabs"
   ],
   "host_permissions": [
     "https://*/*"
