--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "clsx": "^2.1.0",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.0",
-    "react-syntax-highlighter": "^16.1.0"
+    "react-syntax-highlighter": "^16.1.0",
+    "jszip": "^3.10.1",
+    "pdfjs-dist": "^4.0.379"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "^2.0.0-beta.23",
